B-F Backup Sandbox 30.4.12/src/objects/Diagram_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Breakpoint__c</fullName>
        <label>Breakpoint</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acceptableColor__c</fullName>
        <label>acceptableColor</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inacceptableColor__c</fullName>
        <label>inacceptableColor</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reportID__c</fullName>
        <label>reportID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Diagram Settings</label>
</CustomObject>